<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            style="@style/WrapContent"
            android:src="@drawable/bandera" />

        <TextView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:text="@string/flag"
            android:textStyle="italic" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/introduction" />

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="4dp"
            android:text="@string/short_description" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/main_sights"
            android:layout_marginTop="7dp"/>

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="4dp"
            android:text="@string/main_sights_description" />

        <ImageView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cable"
            android:layout_marginTop="4dp"/>

        <TextView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:text="@string/cable"
            android:textStyle="italic" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/people"
            android:layout_marginTop="7dp"/>

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="4dp"
            android:text="@string/people_description" />

        <ImageView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/mariposas"/>

        <TextView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:text="@string/mariposas"
            android:textStyle="italic" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/sports" />

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="4dp"
            android:text="@string/sports_description" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/geography"
            android:layout_marginTop="7dp"/>

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="4dp"
            android:text="@string/geography_description" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/climate" />

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="7dp"
            android:text="@string/climate_description" />

        <ImageView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/puerto"/>

        <TextView
            style="@style/WrapContent"
            android:layout_gravity="center_horizontal"
            android:text="@string/harbour"
            android:textStyle="italic" />

        <TextView
            style="@style/MatchWrap"
            android:layout_marginTop="8dp"
            android:text="@string/climate_description_2" />

    </LinearLayout>
</ScrollView>